<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_seg</name>
  <version>1.0.0</version>
  <description>ROS 2 PP-LiteSeg semantic-segmentation node via vision_service.h.</description>
  <maintainer email="robot_team@spacemit.com">robot_team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>vision</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>python3</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
